Add error message

--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -8,5 +8,8 @@
   "sendRewardSuccess": "{gameReward} 已經發送給 {playerName}",
   "_stamp": "戳章",
   "_fragment": "碎片",
-  "has_bingos": "已達成 {bingos} 連線"
+  "has_bingos": "已達成 {bingos} 連線",
+  "Already take from this deliverer": "已經蓋過章囉(￣▽￣)",
+  "invalid receiver token": "條碼好像不正確(⊙ω⊙)",
+  "token and receiver required": "好像抓不到條碼(;´༎ຶД༎ຶ`)"
 }
