Show alert if QRCode can not be recognized

--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -11,5 +11,6 @@
   "has_bingos": "已達成 {bingos} 連線",
   "Already take from this deliverer": "已經蓋過章囉(￣▽￣)",
   "invalid receiver token": "條碼好像不正確(⊙ω⊙)",
-  "token and receiver required": "好像抓不到條碼(;´༎ຶД༎ຶ`)"
+  "token and receiver required": "好像抓不到條碼(;´༎ຶД༎ຶ`)",
+  "qrcode_scan_fail": "無法識別 QR Code，請嘗試調整亮度與拍照角度試試"
 }
