--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,5 +11,6 @@
   "has_bingos": "{ bingos } bingos",
   "Already take from this deliverer": "Already take from this deliverer",
   "invalid receiver token": "Invalid receiver token",
-  "token and receiver required": "Token and receiver required"
+  "token and receiver required": "Token and receiver required",
+  "qrcode_scan_fail": "QRCode not found, please retry after adjust screen brightness of QRCode and photo shooting angle"
 }
