Add new message translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,5 +13,6 @@
   "invalid receiver token": "Invalid receiver token",
   "token and receiver required": "Token and receiver required",
   "qrcode_scan_fail": "QRCode not found, please retry after adjust screen brightness of QRCode and photo shooting angle",
-  "Game configuration is not correct": "Game configuration is not correct. Please report this problem to staffs."
+  "Game configuration is not correct": "Game configuration is not correct. Please report this problem to staffs.",
+  "invalid token": "Invalid Token"
 }
