--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -13,5 +13,6 @@
   "invalid receiver token": "條碼好像不正確(⊙ω⊙)",
   "token and receiver required": "好像抓不到條碼(;´༎ຶД༎ຶ`)",
   "qrcode_scan_fail": "無法識別 QR Code，請嘗試調整亮度與拍照角度試試",
-  "Game configuration is not correct": "遊戲設定檔異常，無法進行遊戲，請回報給工作人員(´・ω・`)"
+  "Game configuration is not correct": "遊戲設定檔異常，無法進行遊戲，請回報給工作人員(´・ω・`)",
+  "invalid token": "QRCode 無效(*´∀｀*)"
 }
