--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -14,5 +14,7 @@
   "token and receiver required": "好像抓不到條碼(;´༎ຶД༎ຶ`)",
   "qrcode_scan_fail": "無法識別 QR Code，請嘗試調整亮度與拍照角度試試",
   "Game configuration is not correct": "遊戲設定檔異常，無法進行遊戲，請回報給工作人員(´・ω・`)",
-  "invalid token": "QRCode 無效(*´∀｀*)"
+  "invalid token": "QRCode 無效(*´∀｀*)",
+  "Internal Server Error": "Server 好像壞了欸，快呼叫 Denny Huang　_(:3」∠)_"
+
 }
